--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ body{
 .header{
     background-color: rgb(231, 42, 63);
 }
+h1{
+    font-size: 60px;
+}
 h2{
     margin: 0;
     color: white;
@@ -12,23 +15,33 @@ h2{
     font-size: 40px;
     font-weight: 500;
 }
+h3{
+    font-size: 45px;
+    color: rgb(112, 112, 112);
+}
+h4{
+    font-size: 40px;
+}
+p{
+    font-size: 20px;
+    color: rgb24, 25, 31);
+}
 .top-banner{
     display: flex;
 }
-h1{
-    font-size: 60px;
-}
+
 .added-color{
     color: rgb(231, 42, 63);
 }
-p{
-    font-size: 35px;
-}
+
 .width-text{
     width: 50%;
     padding-top: 3%;
     padding-left: 8%;
     padding-right: 10%;
+}
+.width-text p{
+    padding-bottom: 40px;
 }
 .width-img{
     width: 50%;
@@ -40,4 +53,57 @@ p{
     background-image: linear-gradient(to left, rgb(231, 42, 63) 10px, rgb(255, 147, 5));
     border-radius: 50px;
     padding: 15px 25px;
+    box-shadow: 0px 0px 12px rgb(231, 42, 63) ;
 }
+.about-info{
+    display: flex;
+    background-image: url(images/shapes/Frame-58.png);
+    margin-top: 50px;
+    margin-bottom: 0;
+    background-repeat: no-repeat;
+}
+.width-img-about-me{
+    width: 50%;
+    margin-left: 5%;
+    margin-top: 3%;
+    margin-bottom: 0%;
+    padding-bottom: 0%;
+
+}
+.width-text-about-me{
+    
+    width: 50%;
+    margin-top: 250px;
+    margin-right: 3%;
+    margin-bottom: 0;
+}
+.width-text-about-me p{
+    padding-bottom: 40px;
+}
+.recipie{
+    text-align: center;
+}
+.boxes{
+    display: flex;
+}
+.box-01{
+    width: 30%;
+    background-color: white;
+    margin: 3%;
+    border-radius: 30px;
+    box-shadow: 0px 0px 10px gray;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 40px;
+}
+.box-01 img{
+   max-width: 100%;
+   margin-top: 40px;
+}
+.box-01 h4{
+    margin-bottom: 0;
+}
+.box-01 a{
+    margin-left: 5px;
+}
+
