--- a/style.css
+++ b/style.css
@@ -2,9 +2,28 @@ body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
 }
-.header{
-    background-color: rgb(231, 42, 63);
+.header {
+    overflow: hidden;
+    background-color: gray;
+    padding: 20px 10px;
 }
+.header a{
+    float: left;
+  color: white;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px; 
+  line-height: 25px;
+  border-radius: 4px;
+}
+.header a.logo {
+    font-size: 40px;
+    font-weight: 600;
+  }
+  .right-hader {
+    float: right;
+  }
 h1{
     font-size: 60px;
 }
@@ -25,6 +44,9 @@ h4{
 p{
     font-size: 20px;
     color: rgb24, 25, 31);
+}
+small{
+    font-size: 16px;
 }
 .top-banner{
     display: flex;
@@ -105,5 +127,44 @@ p{
 }
 .box-01 a{
     margin-left: 5px;
+}
+.social-info{
+    display: flex;
+}
+.social-info h3{
+    margin: 0;
+}
+.social-info-bg{
+    background-color: white;
+    box-shadow: 0px 0px 10px gray;
+    margin: 3%;
+    border-radius: 15px;
+    padding-bottom: 100px;
+    padding-left: 150px;
+    padding-right: 100px;
+    padding-top: 100px;
+}
+.social-info-box{
+    
+    padding-left: 10%;
+    padding-right: 10%;
+}
+.social-info-box h3{
+font-size: 60px;
+}
+footer{
+    background-color: black;
+    text-align: center;
+}
+footer h3{
+    margin-bottom: 0;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    
+}
+footer p{
+    color: white;
+    margin-top: 0;
+    padding-bottom: 120px;
 }
 
